--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
+*/node_modules
 # testing
 /coverage
 
@@ -19,5 +17,3 @@
 .env.production.local
 
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
